[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cell2tcr"
authors = [{name = "Lisa M Dratva", email = "ld21@sanger.ac.uk"}]
readme = "README.md"
# license = {file = "LICENSE"}
# classifiers = ["XXX"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "pandas",
    "scanpy",
    "celltypist",
    "tcrdist",
    "igraph",
    "leidenalg",
    "matplotlib",
    "logomaker",
]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/Teichlab/cell2tcr"